  working exactly like in php.ini; with FastCGI -d affects all requests).
  (Dmitry)
- Fixed bug #39004 (Fixed generation of config.nice with autoconf 2.60).
  (Ilia)
- Fixed bug #39003 (__autoload() is called for type hinting). (Dmitry, Tony)
- Fixed bug #39001 (ReflectionProperty returns incorrect declaring class for 
  protected properties). (Tony)
- Fixed bug #38993 (Fixed safe_mode/open_basedir checks for
  session.save_path, allowing them to account for extra parameters). (Ilia)
- Fixed bug #38981 (using FTP URLs in get_headers() causes crash). (Tony)
- Fixed bug #38961 (metaphone() results in segmentation fault on NetBSD). 
  (Tony)
- Fixed bug #38963 (Fixed a possible open_basedir bypass in tempnam()). (Ilia)
- Fixed bug #38949 (Cannot get xmlns value attribute). (Rob)
- Fixed bug #38942 (Double old-style-ctor inheritance). (Dmitry)
- Fixed bug #38941 (imap extension does not compile against new version of
  the imap library). (Ilia)
- Fixed bug #38904 (apache2filter changes cwd to /). (Ilia, Hannes)
- Fixed bug #38891 (get_headers() do not work with curl-wrappers). (Ilia)
- Fixed bug #38859 (parse_url() fails if passing '@' in passwd). (Tony)
- Fixed bug #38844 (curl_easy_strerror() is defined only since cURL 7.12.0).
  (Tony)
- Fixed bug #38808 ("maybe ref" issue for current() and others). (Dmitry)
- Fixed bug #38623 (leaks in a tricky code with switch() and exceptions).
  (Dmitry)
- Fixed bug #38579 (include_once() may include the same file twice). (Dmitry)
- Fixed bug #38574 (missing curl constants and improper constant detection).
  (Ilia)
- Fixed bug #37870 (pgo_pgsql tries to de-allocate unused statements).
  (Ilia, ce at netage dot bg)
- Fixed bug #36681 (pdo_pgsql driver incorrectly ignored some errors). (Wez,
  Ilia)
- Fixed bug #34066 (recursive array_walk causes segfault). (Tony)
- Fixed bug #34065 (throw in foreach causes memory leaks). (Dmitry)

14 Sep 2006, PHP 5.2.0RC4
- Added DSA key generation support to openssl_pkey_new(), FR #38731